--- a/config/samples/network_disruption_latency.yaml
+++ b/config/samples/network_disruption_latency.yaml
@@ -14,6 +14,10 @@ spec:
     app: demo
   count: 1 # number of pods to target or a percentage (1% - 100%)
   network: # network disruption settings, all those disruptions are applied to outgoing traffic only
+    hosts: # optional (targets all hosts if not specified)
+      - 10.0.0.0/8 # destination host
+    port: 80 # optional, port to drop packets on
+    protocol: tcp # optional, protocol to drop packets on (can be tcp or udp, defaults to both)
     flow: egress # optional, flow direction (egress: outgoing traffic, ingress: incoming traffic, defaults to egress)
-    delay: 100 # optional, latency to apply to packets in ms
-    jitter: 50 # optional, add X % (1-100) of delay as jitter to delay (+- X% ms to original delay), defaults to 10%, cannot be set to 0
+    delay: 1000 # optional, latency to apply to packets in ms
+    jitter: 5 # optional, add X % (1-100) of delay as jitter to delay (+- X% ms to original delay), defaults to 10%
