missed references and updated manifests

--- a/config/crd/bases/chaos.datadoghq.com_disruptions.yaml
+++ b/config/crd/bases/chaos.datadoghq.com_disruptions.yaml
@@ -89,6 +89,10 @@ spec:
                   maximum: 59999
                   minimum: 0
                   type: integer
+                delayJitter:
+                  maximum: 100
+                  minimum: 0
+                  type: integer
                 drop:
                   maximum: 100
                   minimum: 0
@@ -107,10 +111,6 @@ spec:
                     type: string
                   nullable: true
                   type: array
-                jitter:
-                  maximum: 100
-                  minimum: 0
-                  type: integer
                 port:
                   maximum: 65535
                   minimum: 0
