Add jitter for delay to the chaos-controller (#195)
* add jitter to the chaos-controller

* Jitter->DelayJitter,Fixed Samples,Allow Jitter=0,Update Params updating

* update manifests

* fix linting issues

* all jitter -> delayJitter

* missed a reference

* missed references and updated manifests

* catch last of jitter mentions and update configuration

--- a/config/crd/bases/chaos.datadoghq.com_disruptions.yaml
+++ b/config/crd/bases/chaos.datadoghq.com_disruptions.yaml
@@ -89,6 +89,10 @@ spec:
                   maximum: 59999
                   minimum: 0
                   type: integer
+                delayJitter:
+                  maximum: 100
+                  minimum: 0
+                  type: integer
                 drop:
                   maximum: 100
                   minimum: 0
