--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -36,6 +36,13 @@ rules:
 - apiGroups:
   - ""
   resources:
+  - nodes
+  verbs:
+  - list
+  - watch
+- apiGroups:
+  - ""
+  resources:
   - pods
   verbs:
   - create
