--- a/config/samples/network_disruption_corrupt.yaml
+++ b/config/samples/network_disruption_corrupt.yaml
@@ -19,4 +19,4 @@ spec:
     port: 80 # optional, port to drop packets on
     protocol: tcp # optional, protocol to drop packets on (can be tcp or udp, defaults to both)
     flow: egress # optional, flow direction (egress: outgoing traffic, ingress: incoming traffic, defaults to egress)
-    corrupt: 100 # optional, probability to corrupt packets (between 0 and 100)
+    corrupt: 100 # "mandatory", at least one of `bandwidthLimit`, `delay`, `drop`, `corrupt`, or `duplicate` must be specified; probability to corrupt packets (between 0 and 100)
