--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -94,6 +94,7 @@ jobs:
           command: |
             go mod tidy
             git diff --exit-code
+  # this will fail if changes in packages are checked into git but the updated manifests are not
   manifests:
     executor: golang
     steps:
