CORE-439: DNS Failure Disruptions (#237)
* CORE-439: Draft PR, at time of first review. add initial dns disruption

* Initial inclusion of core-os/go-iptables

* Make sure to dryrun in iptables; wow this looks awful

* Make injection cleanup idempotent

* Initial unit tests

* Add fun idempotency test

* Add some light inject tests

* Initial docs

* Replace DeleteChain w/ ClearAndDeleteChain

* Fix CI by mocking python

* Improve node level disruptions

* Strip whitespace from A record values

--- a/config/crd/bases/chaos.datadoghq.com_disruptions.yaml
+++ b/config/crd/bases/chaos.datadoghq.com_disruptions.yaml
@@ -66,6 +66,32 @@ spec:
               - path
               - throttling
               type: object
+            dns:
+              description: DNSDisruptionSpec represents a dns disruption
+              items:
+                description: HostRecordPair represents a hostname and a corresponding
+                  dns record override
+                properties:
+                  hostname:
+                    type: string
+                  record:
+                    description: DNSRecord represents a type of DNS Record, such as
+                      A or CNAME, and the value of that record
+                    properties:
+                      type:
+                        type: string
+                      value:
+                        type: string
+                    required:
+                    - type
+                    - value
+                    type: object
+                required:
+                - hostname
+                - record
+                type: object
+              nullable: true
+              type: array
             dryRun:
               type: boolean
             level:
