--- a/config/samples/complete.yaml
+++ b/config/samples/complete.yaml
@@ -13,7 +13,9 @@ spec:
   level: pod # level the disruption should be injected at (can be either pod or node, defaults to pod)
   selector: # label selector to target pods
     app: demo
-  container: demo1 # optional, name of the container to target within the targeted pod
+  containers: # optional, name of the containers to target within the targeted pod, by default all pods are targeted
+    - demo
+    - demo2
   count: 1 # number of pods to target or a percentage (1% - 100%)
   nodeFailure: # node kernel panic or shutdown
     shutdown: true # optional, shutdown the host instead of triggering a stack dump (defaults to false)
