--- a/config/samples/network_disruption_bandwidth.yaml
+++ b/config/samples/network_disruption_bandwidth.yaml
@@ -13,6 +13,8 @@ spec:
   selector: # label selector to target pods
     app: demo
   count: 1 # number of pods to target or a percentage (1% - 100%)
+  containers: # optional, name of the containers to target within the targeted pod, by default all pods are targeted
+    - demo
   network: # network disruption settings, all those disruptions are applied to outgoing traffic only
     hosts: # optional (targets all hosts if not specified)
       - 10.0.0.0/8 # destination host
