add delete only mode to the chaos controller

--- a/config/crd/bases/chaos.datadoghq.com_disruptions.yaml
+++ b/config/crd/bases/chaos.datadoghq.com_disruptions.yaml
@@ -47,6 +47,8 @@ spec:
               description: CPUPressureSpec represents a cpu pressure disruption
               nullable: true
               type: object
+            deleteOnly:
+              type: boolean
             diskPressure:
               description: DiskPressureSpec represents a disk pressure disruption
               nullable: true
