--- a/config/samples/complete.yaml
+++ b/config/samples/complete.yaml
@@ -36,12 +36,12 @@ spec:
     throttling:
       readBytesPerSec: 1024 # optional, read throttling in bytes per sec
       writeBytesPerSec: 2048 # optional, write throttling in bytes per sec
-  dns:
-    - hostname: foo.bar.svc.cluster.local
+  dns: # disrupt DNS resolutions by faking results
+    - hostname: foo.bar.svc.cluster.local # record hostname which should be faked
       record:
-        type: A
-        value: 10.0.0.154,10.0.0.13
-    - hostname: datadoghq.com
+        type: A # return an A record
+        value: 10.0.0.154,10.0.0.13 # list of IPs to return (will be round-robined)
+    - hostname: datadoghq.com # record hostname which should be faked
       record:
-        type: CNAME
-        value: google.com
+        type: CNAME # return a CNAME record
+        value: google.com # hostname to return
