--- a/config/samples/count_percentage.yaml
+++ b/config/samples/count_percentage.yaml
@@ -6,11 +6,12 @@
 apiVersion: chaos.datadoghq.com/v1beta1
 kind: Disruption
 metadata:
-  name: cpu-pressure
+  name: count-percentage
   namespace: chaos-engineering
 spec:
   level: pod
   selector:
     app: demo-curl
-  count: 1
-  cpuPressure: {} # consume as much CPU as possible to generate load
+  count: 50% # target a percentage of the targets matching the selector instead of a fixed count (will be rounded up, min 1%, max 100%)
+  nodeFailure:
+    shutdown: false
