--- a/config/samples/network_corrupt.yaml
+++ b/config/samples/network_corrupt.yaml
@@ -6,11 +6,12 @@
 apiVersion: chaos.datadoghq.com/v1beta1
 kind: Disruption
 metadata:
-  name: cpu-pressure
+  name: network-corrupt
   namespace: chaos-engineering
 spec:
   level: pod
   selector:
     app: demo-curl
   count: 1
-  cpuPressure: {} # consume as much CPU as possible to generate load
+  network:
+    corrupt: 100 # percentage of outgoing packets to corrupt
