--- a/config/samples/network_ingress.yaml
+++ b/config/samples/network_ingress.yaml
@@ -6,11 +6,14 @@
 apiVersion: chaos.datadoghq.com/v1beta1
 kind: Disruption
 metadata:
-  name: cpu-pressure
+  name: network-ingress
   namespace: chaos-engineering
 spec:
   level: pod
   selector:
     app: demo-curl
   count: 1
-  cpuPressure: {} # consume as much CPU as possible to generate load
+  network:
+    flow: ingress # disrupt incoming traffic instead of outgoing (requires at least a port or a host to be specified, only works for TCP, please read implementation details before using to know the current limitations)
+    port: 80
+    drop: 10
