--- a/config/samples/network_duplication.yaml
+++ b/config/samples/network_duplication.yaml
@@ -6,11 +6,11 @@
 apiVersion: chaos.datadoghq.com/v1beta1
 kind: Disruption
 metadata:
-  name: node-failure-shutdown
+  name: network-duplication
   namespace: chaos-engineering
 spec:
   selector:
     app: demo-curl
   count: 1
-  nodeFailure:
-    shutdown: true # shutdown the host (violently) instead of triggering a kernel panic so the host is kept down and not restarted
+  network:
+    duplicate: 100 # percentage of outgoing packets to duplicate
