--- a/config/samples/containers_targeting.yaml
+++ b/config/samples/containers_targeting.yaml
@@ -6,11 +6,14 @@
 apiVersion: chaos.datadoghq.com/v1beta1
 kind: Disruption
 metadata:
-  name: node-failure-shutdown
+  name: containers-targeting
   namespace: chaos-engineering
 spec:
+  level: pod
   selector:
     app: demo-curl
+  containers: # only target the dummy container, you can specify multiple containers here (all containers are targeted by default)
+    - dummy
   count: 1
-  nodeFailure:
-    shutdown: true # shutdown the host (violently) instead of triggering a kernel panic so the host is kept down and not restarted
+  network:
+    drop: 10
