--- a/config/samples/cpu_pressure.yaml
+++ b/config/samples/cpu_pressure.yaml
@@ -6,11 +6,11 @@
 apiVersion: chaos.datadoghq.com/v1beta1
 kind: Disruption
 metadata:
-  name: disruption-sample
-  namespace: chaos-engineering # disruption resource must be in the same namespace as targeted pods
+  name: cpu-pressure
+  namespace: chaos-engineering
 spec:
-  level: pod # level the disruption should be injected at (can be either pod or node, defaults to pod)
-  selector: # label selector to target pods
-    app: demo
-  count: 1 # number of pods to target or a percentage (1% - 100%)
-  cpuPressure: {} # cpu load generator
+  level: pod
+  selector:
+    app: demo-curl
+  count: 1
+  cpuPressure: {} # consume as much CPU as possible to generate load
