--- a/config/samples/network_delay.yaml
+++ b/config/samples/network_delay.yaml
@@ -6,11 +6,13 @@
 apiVersion: chaos.datadoghq.com/v1beta1
 kind: Disruption
 metadata:
-  name: node-failure-shutdown
+  name: network-delay
   namespace: chaos-engineering
 spec:
+  level: pod
   selector:
     app: demo-curl
   count: 1
-  nodeFailure:
-    shutdown: true # shutdown the host (violently) instead of triggering a kernel panic so the host is kept down and not restarted
+  network:
+    delay: 1000 # delay (in milliseconds) to add to outgoing packets, 10% of jitter will be added by default
+    delayJitter: 5 # (optional) add X % (1-100) of delay as jitter to delay (+- X% ms to original delay), defaults to 10%
