--- a/bin/injector/Dockerfile
+++ b/bin/injector/Dockerfile
@@ -1,7 +1,7 @@
-FROM alpine:3.11.2 as injector
+FROM ubuntu:focal as injector
 
-RUN apk update && \
-    apk add git gcc musl-dev iproute2 coreutils python3
+RUN apt-get update && \
+    apt-get -y install git gcc musl-dev iproute2 coreutils python3
 
 COPY injector /usr/local/bin/injector
 COPY dns_disruption_resolver.py /usr/local/bin/dns_disruption_resolver.py
