--- a/bin/injector/Dockerfile
+++ b/bin/injector/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu:focal as injector
 
 RUN apt-get update && \
-    apt-get -y install git gcc iproute2 coreutils python3
+    apt-get -y install git gcc iproute2 coreutils python3 iptables
 
 COPY injector /usr/local/bin/injector
 COPY dns_disruption_resolver.py /usr/local/bin/dns_disruption_resolver.py
