--- a/config/samples/complete.yaml
+++ b/config/samples/complete.yaml
@@ -11,8 +11,9 @@ metadata:
 spec:
   dryRun: false # optional, enable dry-run mode (chaos pods will be created but won't inject anything)
   level: pod # level the disruption should be injected at (can be either pod or node, defaults to pod)
-  selector: # label selector to target pods
+  selector: # label selector[s] to target pods
     app: demo
+    team: developers
   containers: # optional, name of the containers to target within the targeted pod, by default all pods are targeted
     - demo
     - demo2
