--- a/.golangci.yml
+++ b/.golangci.yml
@@ -51,3 +51,5 @@ issues:
     - Use of weak cryptographic primitive
     # stylecheck
     - at least one file in a package should have a package comment
+    # golint
+    - (comment on exported (method|function|type|const)|should have( a package)? comment|comment should be of the form)
