Refactor network disruption hosts field

--- a/config/crd/bases/chaos.datadoghq.com_disruptions.yaml
+++ b/config/crd/bases/chaos.datadoghq.com_disruptions.yaml
@@ -138,19 +138,22 @@ spec:
                   type: string
                 hosts:
                   items:
-                    type: string
+                    properties:
+                      host:
+                        type: string
+                      port:
+                        maximum: 65535
+                        minimum: 0
+                        type: integer
+                      protocol:
+                        enum:
+                        - tcp
+                        - udp
+                        - ""
+                        type: string
+                    type: object
                   nullable: true
                   type: array
-                port:
-                  maximum: 65535
-                  minimum: 0
-                  type: integer
-                protocol:
-                  enum:
-                  - tcp
-                  - udp
-                  - ""
-                  type: string
               type: object
             nodeFailure:
               description: NodeFailureSpec represents a node failure injection
