--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -127,6 +127,7 @@ release-injector:
     TAG: "${CI_COMMIT_TAG}"
 
 .release-docker-hub: &release-docker-hub
+  <<: *meta-release
   stage: release-public
   tags: [ "runner:docker", "size:large" ]
   image: 486234852809.dkr.ecr.us-east-1.amazonaws.com/docker-notary:v1912023-8c8dc1c-0.6.1
