--- a/chart/templates/injector_role.yaml
+++ b/chart/templates/injector_role.yaml
@@ -2,17 +2,21 @@
 # under the Apache License Version 2.0.
 # This product includes software developed at Datadog (https://www.datadoghq.com/).
 # Copyright 2021 Datadog, Inc.
-
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: proxy-role
+  creationTimestamp: null
+  name: chaos-injector-role
 rules:
-- apiGroups: ["authentication.k8s.io"]
+- apiGroups:
+  - ""
   resources:
-  - tokenreviews
-  verbs: ["create"]
-- apiGroups: ["authorization.k8s.io"]
+  - pods
+  verbs:
+  - list
+- apiGroups:
+  - ""
   resources:
-  - subjectaccessreviews
-  verbs: ["create"]
+  - services
+  verbs:
+  - get
