--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -2,6 +2,4 @@
 # under the Apache License Version 2.0.
 # This product includes software developed at Datadog (https://www.datadoghq.com/).
 # Copyright 2021 Datadog, Inc.
-
-resources:
-- monitor.yaml
+image: docker.io/library/chaos-controller:latest
