--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -2,4 +2,8 @@
 # under the Apache License Version 2.0.
 # This product includes software developed at Datadog (https://www.datadoghq.com/).
 # Copyright 2021 Datadog, Inc.
-image: docker.io/library/chaos-controller:latest
+
+images:
+  controller: docker.io/library/chaos-controller
+  injector: docker.io/library/chaos-injector
+  tag: latest
