--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,7 @@ commands:
             - /go
             - /usr/local/bin/golangci-lint
             - /usr/local/kubebuilder
+            - /usr/local/bin/helm
   go_restore_cache:
     description: "Restore golang cache"
     steps:
@@ -49,6 +50,7 @@ executors:
       KUBEBUILDER_VERSION: 2.3.1
       KUBEBUILDER_ARCH: amd64
       GOLANGCI_LINT_VERSION: 1.25.1
+      HELM_VERSION: 3.5.4
   python:
     <<: *working_directory
     docker:
@@ -80,6 +82,14 @@ jobs:
           command: |
             cd /usr/local
             curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s v${GOLANGCI_LINT_VERSION}
+      - run:
+          name: Install helm
+          command: |
+            cd /usr/local
+            curl -L -O "https://get.helm.sh/helm-v${HELM_VERSION}-linux-amd64.tar.gz"
+            tar -xvzf helm-v${HELM_VERSION}-linux-amd64.tar.gz
+            mv linux-amd64/helm /usr/local/bin/helm
+            chmod +x /usr/local/bin/helm
       - run:
           name: Cache local dependencies
           command: go mod download
