Switch from kustomize to helm to generate manifests (#308)

--- a/chart/templates/sa.yaml
+++ b/chart/templates/sa.yaml
@@ -2,6 +2,14 @@
 # under the Apache License Version 2.0.
 # This product includes software developed at Datadog (https://www.datadoghq.com/).
 # Copyright 2021 Datadog, Inc.
-
-resources:
-- monitor.yaml
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: chaos-controller
+  namespace: chaos-engineering
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: chaos-injector
+  namespace: chaos-engineering
