--- a/chart/templates/namespace.yaml
+++ b/chart/templates/namespace.yaml
@@ -2,10 +2,7 @@
 # under the Apache License Version 2.0.
 # This product includes software developed at Datadog (https://www.datadoghq.com/).
 # Copyright 2021 Datadog, Inc.
-
-resources:
-- manifests.yaml
-- service.yaml
-
-configurations:
-- kustomizeconfig.yaml
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: chaos-engineering
