Rename master to main for branch ref in release action

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          ref: master
+          ref: main
           fetch-depth: 0
       - name: Generate changelog
         uses: charmixer/auto-changelog-action@v1
