--- a/examples/demo.yaml
+++ b/examples/demo.yaml
@@ -23,6 +23,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: demo
+  namespace: chaos-engineering
 spec:
   storageClassName: manual
   accessModes:
@@ -96,6 +97,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: demo
+  namespace: chaos-engineering
 spec:
   ports:
     - port: 8080
