--- a/examples/demo.yaml
+++ b/examples/demo.yaml
@@ -8,6 +8,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: demo
+  namespace: default
   labels:
     type: local
 spec:
@@ -23,7 +24,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: demo
-  namespace: chaos-engineering
+  namespace: default
 spec:
   storageClassName: manual
   accessModes:
@@ -36,7 +37,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: demo-nginx
-  namespace: chaos-engineering
+  namespace: default
   labels:
     app: demo-nginx
 spec:
@@ -57,7 +58,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: demo-curl
-  namespace: chaos-engineering
+  namespace: default
   labels:
     app: demo-curl
 spec:
@@ -97,7 +98,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: demo
-  namespace: chaos-engineering
+  namespace: default
 spec:
   ports:
     - port: 8080
