--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -40,6 +40,9 @@ spec:
         - --enable-leader-election
         - --metrics-sink=noop
         - --injector-image={{ .Values.images.injector }}:{{ .Values.images.tag }}
+        {{- if .Values.images.pullSecrets }}
+        - --image-pull-secrets={{ .Values.images.pullSecrets }}
+        {{- end }}
         ports:
         - containerPort: 9443
           name: webhook-server
@@ -55,6 +58,10 @@ spec:
         - mountPath: /tmp/k8s-webhook-server/serving-certs
           name: cert
           readOnly: true
+      {{- if .Values.images.pullSecrets }}
+      imagePullSecrets:
+        - name: {{ .Values.images.pullSecrets }}
+      {{- end }}
       terminationGracePeriodSeconds: 10
       volumes:
       - name: cert
