--- a/chart/install.yaml
+++ b/chart/install.yaml
@@ -182,6 +182,11 @@ spec:
                     type: object
                   nullable: true
                   type: array
+                port:
+                  maximum: 65535
+                  minimum: 0
+                  nullable: true
+                  type: integer
                 services:
                   items:
                     properties:
@@ -531,7 +536,7 @@ spec:
         - containerPort: 8443
           name: https
       - name: manager
-        image: datadog/chaos-controller:3.10.0
+        image: datadog/chaos-controller:4.0.0
         imagePullPolicy: IfNotPresent
         command:
         - /usr/local/bin/manager
@@ -539,7 +544,7 @@ spec:
         - --metrics-addr=127.0.0.1:8080
         - --enable-leader-election
         - --metrics-sink=noop
-        - --injector-image=datadog/chaos-injector:3.10.0
+        - --injector-image=datadog/chaos-injector:4.0.0
         ports:
         - containerPort: 9443
           name: webhook-server
